infra/portfolio-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-ui
  labels:
    app: portfolio-ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: portfolio-ui
  template:
    metadata:
      labels:
        app: portfolio-ui
    spec:
      containers:
        - image: ghcr.io/ivantomic77/portfolio-website:latest
          resources:
            limits:
              memory: 50M
              cpu: 250m
          name: portfolio-ui
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 2
