infra/portfolio-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-ui-service
spec:
  selector:
    app: portfolio-ui
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
